@@ -53,44 +53,51 @@
 int kbd_joy_0_enabled = TRUE;	/* enabled by default, doesn't hurt */
 int kbd_joy_1_enabled = FALSE;	/* disabled, would steal normal keys */
 
-int KBD_TRIG_0 = VK_CONTROL;
-int KBD_TRIG_0_LOC = KEY_LOCATION_LEFT;
-int KBD_STICK_0_LEFT = VK_NUMPAD4;
-int KBD_STICK_0_LEFT_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_RIGHT = VK_NUMPAD6;
-int KBD_STICK_0_RIGHT_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_DOWN = VK_NUMPAD2;
-int KBD_STICK_0_DOWN_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_UP = VK_NUMPAD8;
-int KBD_STICK_0_UP_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_LEFTUP = VK_NUMPAD7;
-int KBD_STICK_0_LEFTUP_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_RIGHTUP = VK_NUMPAD9;
-int KBD_STICK_0_RIGHTUP_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_LEFTDOWN = VK_NUMPAD1;
-int KBD_STICK_0_LEFTDOWN_LOC = KEY_LOCATION_NUMPAD;
-int KBD_STICK_0_RIGHTDOWN = VK_NUMPAD3;
-int KBD_STICK_0_RIGHTDOWN_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_TRIG_0 = VK_CONTROL;
+static int KBD_TRIG_0_LOC = KEY_LOCATION_LEFT;
+static int KBD_STICK_0_LEFT = VK_NUMPAD4;
+static int KBD_STICK_0_LEFT_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_RIGHT = VK_NUMPAD6;
+static int KBD_STICK_0_RIGHT_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_DOWN = VK_NUMPAD2;
+static int KBD_STICK_0_DOWN_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_UP = VK_NUMPAD8;
+static int KBD_STICK_0_UP_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_LEFTUP = VK_NUMPAD7;
+static int KBD_STICK_0_LEFTUP_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_RIGHTUP = VK_NUMPAD9;
+static int KBD_STICK_0_RIGHTUP_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_LEFTDOWN = VK_NUMPAD1;
+static int KBD_STICK_0_LEFTDOWN_LOC = KEY_LOCATION_NUMPAD;
+static int KBD_STICK_0_RIGHTDOWN = VK_NUMPAD3;
+static int KBD_STICK_0_RIGHTDOWN_LOC = KEY_LOCATION_NUMPAD;
 
-int KBD_TRIG_1 = VK_TAB;
-int KBD_TRIG_1_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_LEFT = VK_A;
-int KBD_STICK_1_LEFT_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_RIGHT = VK_D;
-int KBD_STICK_1_RIGHT_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_DOWN = VK_X;
-int KBD_STICK_1_DOWN_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_UP = VK_W;
-int KBD_STICK_1_UP_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_LEFTUP = VK_Q;
-int KBD_STICK_1_LEFTUP_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_RIGHTUP = VK_E;
-int KBD_STICK_1_RIGHTUP_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_LEFTDOWN = VK_Z;
-int KBD_STICK_1_LEFTDOWN_LOC = KEY_LOCATION_STANDARD;
-int KBD_STICK_1_RIGHTDOWN = VK_C;
-int KBD_STICK_1_RIGHTDOWN_LOC = KEY_LOCATION_STANDARD;
+static int KBD_TRIG_1 = VK_TAB;
+static int KBD_TRIG_1_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_LEFT = VK_A;
+static int KBD_STICK_1_LEFT_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_RIGHT = VK_D;
+static int KBD_STICK_1_RIGHT_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_DOWN = VK_X;
+static int KBD_STICK_1_DOWN_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_UP = VK_W;
+static int KBD_STICK_1_UP_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_LEFTUP = VK_Q;
+static int KBD_STICK_1_LEFTUP_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_RIGHTUP = VK_E;
+static int KBD_STICK_1_RIGHTUP_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_LEFTDOWN = VK_Z;
+static int KBD_STICK_1_LEFTDOWN_LOC = KEY_LOCATION_STANDARD;
+static int KBD_STICK_1_RIGHTDOWN = VK_C;
+static int KBD_STICK_1_RIGHTDOWN_LOC = KEY_LOCATION_STANDARD;
 static int swap_joysticks = 0;
+
+/* Sound */
+#ifdef SOUND
+static UBYTE *dsp_buffer = NULL;
+static int line_buffer_size;
+static int dsp_buffer_size;
+#endif /* SOUND */
 
 /* These functions call the NestedVM runtime */
 extern int _call_java(int a, int b, int c, int d);
@@ -156,10 +163,6 @@ static int JAVANVM_CheckThreadStatus(void){
 #define JAVANVM_InitSoundSIZE 5
 
 #ifdef SOUND
-
-UBYTE *dsp_buffer;
-int line_buffer_size;
-int dsp_buffer_size;
 
 void Sound_Pause(void)
 {
@@ -732,6 +735,31 @@ int Atari_Keyboard(void)
 	return AKEY_NONE;
 }
 
+static void SoundSetup(void)
+{
+	int dsprate = 48000;
+	int sound_flags = 0;
+	int sconfig[JAVANVM_InitSoundSIZE];
+	sound_flags |= SND_BIT16;
+	sconfig[JAVANVM_InitSoundSampleRate] = dsprate;
+	sconfig[JAVANVM_InitSoundBitsPerSample] = 16;
+	sconfig[JAVANVM_InitSoundChannels] = stereo_enabled ? 2 : 1;
+	sconfig[JAVANVM_InitSoundSigned] = TRUE;
+	sconfig[JAVANVM_InitSoundBigEndian] = TRUE;
+	line_buffer_size = JAVANVM_InitSound((void *)&sconfig[0]);
+	dsp_buffer_size = 4096; /*adjust this to fix skipping/latency*/
+	if (stereo_enabled) dsp_buffer_size *= 2;
+	if (line_buffer_size < dsp_buffer_size) dsp_buffer_size = line_buffer_size;
+	free(dsp_buffer);
+	dsp_buffer = (UBYTE*)malloc(dsp_buffer_size);
+	Pokey_sound_init(FREQ_17_EXACT, dsprate, (stereo_enabled ? 2 : 1) , sound_flags);
+}
+
+void Sound_Reinit(void)
+{
+	SoundSetup();
+}
+
 void Atari_Initialise(int *argc, char *argv[])
 {
 	int i, j;
@@ -761,23 +789,7 @@ void Atari_Initialise(int *argc, char *argv[])
         config[JAVANVM_InitGraphicsATARI_LEFT_MARGIN] = 24;
 		JAVANVM_InitGraphics((void *)&config[0]);
 		JAVANVM_InitPalette((void *)&colortable[0]);
-
-		{
-			int dsprate = 48000;
-			int sound_flags = 0;
-			int sconfig[JAVANVM_InitSoundSIZE];
-			sound_flags |= SND_BIT16;
-			sconfig[JAVANVM_InitSoundSampleRate] = dsprate;
-			sconfig[JAVANVM_InitSoundBitsPerSample] = 16;
-			sconfig[JAVANVM_InitSoundChannels] = 1;
-			sconfig[JAVANVM_InitSoundSigned] = TRUE;
-			sconfig[JAVANVM_InitSoundBigEndian] = TRUE;
-			line_buffer_size = JAVANVM_InitSound((void *)&sconfig[0]);
-			dsp_buffer_size = 4096; /*adjust this to fix skipping/latency*/
-			if (line_buffer_size<dsp_buffer_size) dsp_buffer_size = line_buffer_size;
-			dsp_buffer = (UBYTE*)malloc(dsp_buffer_size);
-			Pokey_sound_init(FREQ_17_EXACT, dsprate, 1, sound_flags);
-		}
+		SoundSetup();
 	}
 	return;
 }
